Добавил актуальную ссылку на GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div id="footer">
 				<div class="ref">Ссылки:</div>
 				<div class="ref"><a href="http://www.emspost.ru/ru/corp_clients/dogovor_docements/api/" target="_blank">EMS API</a></div>
-				<div class="ref"><a href="https://github.com/aleksey-nsk" target="_blank">GitHub</a></div>
+				<div class="ref"><a href="https://github.com/aleksey-nsk/ems_api" target="_blank">GitHub</a></div>
 			</div>
 		</div> <!-- /main_container -->
 	</body> 
